// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.table.body-cell > action column 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 15 1.5 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 225px;
  padding: 0px 16px;
  text-align: left;
  width: 225px;
  overflow-wrap: break-word;
  word-break: break-word;
  height: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  align-self: center;
  justify-content: flex-start;
}

.c1 > * {
  flex-shrink: 0;
  flex-wrap: nowrap;
}

.c1::after {
  content: "";
  font-size: 0px;
  min-height: inherit;
}

.c1.c1 > * {
  align-self: center;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--15 table__actionCell"
  data-role="table-body-cell"
  data-type="table-action-cell"
  data-width="1.5"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1.c1 {
  text-align: left;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 2`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: center;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1.c1 {
  text-align: left;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-middle"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 3`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-end;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1.c1 {
  text-align: left;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-bottom"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 4`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: center;
}

.c1.c1 {
  text-align: center;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-center"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 5`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: center;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: center;
}

.c1.c1 {
  text-align: center;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-center table__contentCell--align-middle"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 6`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-end;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: center;
}

.c1.c1 {
  text-align: center;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-center table__contentCell--align-bottom"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 7`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-end;
}

.c1.c1 {
  text-align: right;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-right"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 8`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: center;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-end;
}

.c1.c1 {
  text-align: right;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-right table__contentCell--align-middle"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > alignment 9`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 150px;
  padding: 8px;
  text-align: left;
  width: 150px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-end;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-end;
}

.c1.c1 {
  text-align: right;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10 table__contentCell--align-right table__contentCell--align-bottom"
  data-role="table-body-cell"
  role="cell"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > cardView 1`] = `
.c3 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c3 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 10 1 auto;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  min-width: 150px;
  padding: 24px 8px 8px;
  text-align: left;
  overflow-wrap: break-word;
  word-break: break-word;
  position: relative;
  font-size: 1rem;
  width: 100%;
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  justify-content: flex-start;
  text-align: left;
}

[data-role="tree"] .c1.c1 {
  padding: 8px;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1,
.c1.h_rightAlign {
  justify-content: flex-start;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

.c2 {
  align-items: center;
  color: rgb(97, 111, 124);
  display: flex;
  font-size: 0.75rem;
  margin-top: -16px;
}

<div
  class="c0 c1 table__contentCell table__contentCell--10"
  data-role="table-body-cell"
  role="listitem"
>
  <div
    class="c2 table__labelCell"
  >
    label test
    <span
      class="c3 -u-unseenButRead"
      data-role="hidden-text"
    >
      , 
    </span>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > column group 1`] = `
.c0 {
  display: flex;
  flex-grow: 1;
}

.c1 {
  position: relative;
}

.c1::after {
  content: "";
  top: 0px;
  right: 0px;
  bottom: 0px;
  position: absolute;
  border-right: 2px solid rgb(241, 242, 244);
  display: block;
  left: unset;
}

<div
  class="c0 c1 table__content-group"
  data-role="table-body-cell-group"
  style="flex-grow: 20; flex-shrink: 2;"
/>
`;

exports[`com.mgmtp.a12.widgets.table.body-cell > properties 1`] = `
.c2 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c2 * {
  width: 1px;
  height: 1px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex: 0 0 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  min-width: 225px;
  padding: 0px 24px;
  text-align: left;
  width: 225px;
  overflow-wrap: break-word;
  word-break: break-word;
  color: rgb(77, 77, 77);
}

.c0 p:first-child {
  margin-top: 0px;
}

.c0 p:last-child {
  margin-bottom: 0px;
}

.c0 > * {
  color: rgb(77, 77, 77);
}

.c1 {
  min-height: 32px;
  overflow: hidden;
  flex-direction: column;
  border-bottom: 1px solid rgb(211, 214, 220);
  border-top: 1px solid transparent;
  background-color: rgb(242, 242, 242);
  color: rgb(97, 111, 124);
  justify-content: flex-start;
}

.c1.c1 > * {
  align-self: flex-start;
}

.c1 [class*="field--block"] {
  flex-grow: 0;
}

<div
  class="c0 c1 table__contentCell table__contentCell--secondary table__contentCell--15 table__contentCell--fixedWidth table__contentCell--sub-info"
  data-role="table-body-cell"
  data-width="1.5"
  role="cell"
>
  <span
    class="c2 -u-unseenButRead"
    data-role="hidden-text"
  >
    title test
  </span>
</div>
`;
